Fix first time installation.
*requirements-freeze.txt cannot be used as a marker for install because
it is committed to git (intentionally).  Instead, we use another file to
records that the frozen requirements are actually installed on the local
system.  This file is .gitignored such that a new system will always
need to create it (and thereby install the requirements).

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ credentials.json
 
 # data fetched from jenkins
 data/
+
+# local make artifacts for partial builds
+.requirements-installed.txt
+.dev-requirements-installed.txt
