Allow unspecified start & end jids.
I typically want to fetch the latest job data from Jenkins.  It is
convenient to be able to do this without tweaking config.json.

--- a/config.json.example
+++ b/config.json.example
@@ -1,6 +1,5 @@
 {
     "url": "https://jenkins.gravitational.io",
     "job": "Gravity-Nightly",
-    "jid_start": 340,
-    "jid_end":   352
+    "jid_start": 340
 }
